<resources>
    <string name="app_name">TreasureHunt</string>
    <string name="bMainSearch">Search</string>
    <string name="bMainSettings">Settings</string>
    <string name="bMainProfile">Profile</string>
    <string name="bMainLogin">Login</string>
    <string name="bMainStart">Start</string>
    <string name="bMainStop">Stop</string>
    <string name="bMainPause">Pause</string>
    <string name="bProfileBack">Back</string>
    <string name="bSettingsSave">Save and return</string>
    <string name="bSearchBack">Return</string>
    <string name="bSearchSearch">Search</string>
    <string name="ivHuntNavigation">GPS Navigation is active</string>
    <string name="ivHuntType">Show hunt type</string>
    <string name="bHuntAnswer">Answer question</string>
    <string name="bHuntHint">Hint on question</string>
    <string name="iHuntQuestion">Image connected to question</string>
    <string name="tMainName">Name of the game:</string>
    <string name="tMainNameScr">Default</string>
    <string name="tMainTime">Approx game time:</string>
    <string name="tMainTimeScr">00:00:00</string>
    <string name="tMainNoPositions">Number of positions:</string>
    <string name="tMainNoPositionsScr">0</string>
    <string name="tMainType">Type of game:</string>
    <string name="tMainTypeScr">" -"</string>
    <string name="tMainLocation">Location:</string>
    <string name="tMainLocationScr">Default</string>
    <string name="tMainImageDesc">Label of the image</string>
    <string name="tProfileName">Name of the hunter:</string>
    <string name="tProfileNameScr">Your name here</string>
    <string name="tProfileScoreHunt">Hunt average time rate :</string>
    <string name="tProfileScoreHuntScr">Avg hunt time</string>
    <string name="tProfileScoreQuiz">Quiz average time rate:</string>
    <string name="tProfileScoreQuizScr">Avg quiz time</string>
    <string name="tSettingsLanguage">Language:</string>
    <string name="tSettingsTextSize">Fontsize:</string>
    <string name="tSettingsLocation">Resident of hunter:</string>
    <string name="tSettingsLocationScr">Your location</string>
    <string name="tSettingsName">Name of the hunter:</string>
    <string name="tSettingsNameScr">Your name</string>
    <string name="tSettingsAccount">Type of account:</string>
    <string name="tSettingsAccountScr">Your type of account</string>
    <string name="tSearchFreeText">Free text:</string>
    <string name="etSearchFreeText">-</string>
    <string name="tSearchCountry">Country: </string>
    <string name="tSearchLocation">Location:</string>
    <string name="etSearchLocation">-</string>
    <string name="tSearchType">Type:</string>
    <string name="tvSearchSelected">-</string>
    <string name="tvSearchLabel">Selected Hunt Id:</string>
    <string name="tHuntAnswer">Your Answer</string>
    <string name="tHuntQuestion">Fail to load question</string>
    <string name="tHuntAnswerDesc">Enter your answer</string>
    <string name="tHuntTimeDesc">Show your time</string>
    <string name="tHuntAlertStopTitle">Confirm stop the hunt</string>
    <string name="tHuntAlertStopMessage">Stop the hunt will erase any answered question and is not reversible. Stop the hunt anyway?</string>
    <string name="tHuntStreetName">Street: </string>
    <string name="tHuntZipNumber">Zip: </string>
    <string name="tHuntDistance">Distance: </string>
    <string name="tHuntErrorDistance">Error distance calculation</string>
    <string name="tConfirm">Correct</string>
    <string name="tContinue">Continue</string>
    <string name="tDecline">Decline</string>
    <string name="bMainLogout">Logout</string>
    <string name="bSettingsRevoke">Switch user</string>
    <string name="tSettingsEmail">Email:</string>
    <string name="etSettingsEmailSrc">your@email.com</string>
    <string name="tSettingPhoto">Photo of hunter:</string>
    <string name="etSettingPhotoScr">Location of photo</string>
    <string name="tSettingAlertTitle">Delete user</string>
    <string name="tSettingAlertMessage">User data will be erased. Erased data can\'t be reverted.</string>
    <string name="tProfileLocation">Resident of hunter:</string>
    <string name="tProfileLocationScr">Your location</string>
    <string name="tProfileQuiz">Number of finished Quiz:</string>
    <string name="tProfileQuizScr">0</string>
    <string name="tProfileHunt">Number of finished Hunts:</string>
    <string name="tProfileHuntScr">0</string>
    <string name="tMainId">Hunt Id:</string>
    <string name="tMainIdScr">-</string>
    <string name="tHuntDefaultText">No ongoing game</string>
    <string name="tFinishTime">Final total time:</string>
    <string name="tFinishAvgTime">Average time per location:</string>
    <string name="tFinishBestTime">Best time on this game:</string>
    <string name="tFinishTimeScr">00:00:00</string>
    <string name="tFinishAvgTimeScr">00:00:00</string>
    <string name="tFinishBestTimeScr">00:00:00</string>
    <string name="bFinishBack">Back</string>
    <string name="tHuntHintTitle">Hint message</string>
    <string name="default_OK">OK</string>

</resources>
