<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iwMainImage"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/tMainImageDesc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iwMainImage">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainName"
                            android:textSize="@dimen/hunt_text_ldpi" />

                        <TextView
                            android:id="@+id/tMainNameScr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/tMainNameScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainId"
                            android:textSize="@dimen/hunt_text_ldpi" />

                        <TextView
                            android:id="@+id/tMainIdScr"
                            android:layout_width="165dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/tMainIdScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainTime"
                            android:textSize="@dimen/hunt_text_ldpi" />

                        <TextView
                            android:id="@+id/tMainTimeScr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainTimeScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainNoPositions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainNoPositions"
                            android:textSize="@dimen/hunt_text_ldpi" />

                        <TextView
                            android:id="@+id/tMainNoPostionsScr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainNoPositionsScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainType"
                            android:textSize="@dimen/hunt_text_ldpi"
                            tools:text="@string/tMainType" />

                        <TextView
                            android:id="@+id/tMainTypeScr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainTypeScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tMainLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainLocation"
                            android:textSize="@dimen/hunt_text_ldpi"
                            tools:text="@string/tMainLocation" />

                        <TextView
                            android:id="@+id/tMainLocationScr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tMainLocationScr"
                            android:textSize="@dimen/hunt_text_ldpi" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                    <Button
                        android:id="@+id/bMainStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ui_buttons"
                        android:contentDescription="@string/bMainStart"
                        android:drawableTop="@drawable/ic_baseline_play_circle_outline_24px"
                        android:text="@string/bMainStart" />

                    <Button
                        android:id="@+id/bMainStop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ui_buttons"
                        android:contentDescription="@string/bMainStop"
                        android:drawableTop="@drawable/ic_baseline_block_24px"
                        android:text="@string/bMainStop" />

                    <Button
                        android:id="@+id/bMainPause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ui_buttons"
                        android:contentDescription="@string/bMainPause"
                        android:drawableTop="@drawable/ic_baseline_pause_circle_outline_24px"
                        android:text="@string/bMainPause" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/bMainSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ui_buttons"
                            android:contentDescription="@string/bMainSearch"
                            android:drawableTop="@drawable/ic_outline_search_24px"
                            android:text="@string/bMainSearch" />

                        <Button
                            android:id="@+id/bMainLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ui_buttons"
                            android:drawableTop="@drawable/ic_login_account"
                            android:text="@string/bMainLogin" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/bMainSettings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ui_buttons"
                            android:contentDescription="@string/bMainSettings"
                            android:drawableTop="@drawable/ic_outline_settings_24px"
                            android:text="@string/bMainSettings" />

                        <Button
                            android:id="@+id/bMainProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ui_buttons"
                            android:contentDescription="@string/bMainProfile"
                            android:drawableTop="@drawable/ic_outline_account_circle_24px"
                            android:text="@string/bMainProfile" />

                    </TableRow>

                </TableLayout>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>